# CrowtherNLP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Localrun.md  README.md  openapi.yaml  pyproject.toml
.github/workflows/: evaluate.yml  package-smoke.yml  publish-pypi.yml  publish-testpypi.yml  release.yml  test.yml
api/: __init__.py  server.py
benchmarks/: README.md  evaluate.py
benchmarks/data/: gold_words.jsonl
benchmarks/results/: latest.json
docs/: API_EXAMPLES.md  INTEGRATION_PLAN.md  PROJECT_PLAN.md  PUBLISHING_PLAN.md
scripts/: check_docs_migration_contract.py  check_migration_contract.py  check_openapi.py  export_openapi.py
tests/: test_api.py  test_g2p.py  test_tokenization.py
yoruba_g2p/: __init__.py  g2p.py
yoruba_g2p/data/: __init__.py
yoruba_g2p/neural/: __init__.py
yoruba_g2p/rules/: __init__.py  digraphs.py  phonemes.py  syllables.py  tones.py
yoruba_g2p/utils/: __init__.py  normalize.py  ssml.py
